@@ -4,6 +4,7 @@ DIST patch-2.6.24-rc1-git15.bz2 370808 RMD160 4c9af26d5490e0091bbf5bf90e181f4fb8
 DIST patch-2.6.24-rc1.bz2 8966500 RMD160 7780e99ff65e745c2c720f99b517aedf9ca02349 SHA1 f93da90a722fdb7a7916ea52a43f4fed9da84ad4 SHA256 2512a51923318bde6175e073b3eec0e58ae07123bcdc49afa11f286b0d4bd06d
 DIST patch-2.6.24-rc2-git1.bz2 101788 RMD160 5d70fa1cc521dbe086c7ecde560e8792388f095d SHA1 c7d2bd4e89eea5d2569d667d0e3b22cacfa19d6b SHA256 498f9c00e8c3ad915dc39203656ebfa652a62fd07948821da0c6e3f1ad7d06b5
 DIST patch-2.6.24-rc2-git3.bz2 145167 RMD160 fa0a67aadbf86b22b7588a556e3c48e1bd6d8e88 SHA1 313514808714f49265f184dcef2391f2ead085ea SHA256 ae3ee322e1479cf0ae2881cd6ca34c745ebc7938673e0212bfd69c5ba07bc4eb
+DIST patch-2.6.24-rc2-git6.bz2 326109 RMD160 1255cde55b4de8fe1759c7cb9392dd19400a2091 SHA1 e72555fc6ebd9a527d9a64a45e156ab0a8ed548f SHA256 3fa81f90f374f9f664988b3591751b7888eff692da0b28aa75e3dd54692496fe
 DIST patch-2.6.24-rc2.bz2 9161681 RMD160 738119066eb1b91ac6e4db299dd81e469412f019 SHA1 b9a44371004907b87f17d8db52afb17a22669f96 SHA256 c316760b5489af874cfc0fdba4b0d9aacf597abeb94a871a6fbaf9876b7e4fd6
 EBUILD git-sources-2.6.24_rc1-r10.ebuild 1235 RMD160 b3ac23ae1f674f8135d2758575415986a096ce63 SHA1 321c9fc5f946b3770ebb133eb943774fadd4b7ee SHA256 6652ef33565ab6ae87f81c645c38a8295645e2980e35a288080a9229dfc0acf0
 MD5 e1de5a626ce52c2159a1022aeff6d0ef git-sources-2.6.24_rc1-r10.ebuild 1235
@@ -21,10 +22,14 @@ EBUILD git-sources-2.6.24_rc2-r3.ebuild 1234 RMD160 fa61a5fb74ada29b4843bdb55d1f
 MD5 fdda7cb35dcd0a2a38a321e747345e83 git-sources-2.6.24_rc2-r3.ebuild 1234
 RMD160 fa61a5fb74ada29b4843bdb55d1f020d48d1ae96 git-sources-2.6.24_rc2-r3.ebuild 1234
 SHA256 cf0fa3e08e25f33d4ffb645e0c5e31eece5b1576a88436729f7ec1b2f9c37a73 git-sources-2.6.24_rc2-r3.ebuild 1234
-MISC ChangeLog 23483 RMD160 7173925cf1d83b7b49b5e4096cb38aecb2895bde SHA1 35339c16ff7e7daa347cacad27dfd9951f7065f6 SHA256 b3c62d645a4162cc2d060884b5f88b664a5c5c107e41039f28edb11870c72349
-MD5 a532d00972debdbfe5fca1cf2c7447f4 ChangeLog 23483
-RMD160 7173925cf1d83b7b49b5e4096cb38aecb2895bde ChangeLog 23483
-SHA256 b3c62d645a4162cc2d060884b5f88b664a5c5c107e41039f28edb11870c72349 ChangeLog 23483
+EBUILD git-sources-2.6.24_rc2-r6.ebuild 1234 RMD160 f82f14d0b6a7f8e25bc2057865f1d2f24f594212 SHA1 f751eef5c4a97b10751e25a98e939f8277785853 SHA256 8a0dcd5ff421cc63a9828ab30d77f2e83cc49860a195630cf5164c54f4205c08
+MD5 38f5009b9b6bc00f6d20fcba607adcee git-sources-2.6.24_rc2-r6.ebuild 1234
+RMD160 f82f14d0b6a7f8e25bc2057865f1d2f24f594212 git-sources-2.6.24_rc2-r6.ebuild 1234
+SHA256 8a0dcd5ff421cc63a9828ab30d77f2e83cc49860a195630cf5164c54f4205c08 git-sources-2.6.24_rc2-r6.ebuild 1234
+MISC ChangeLog 23626 RMD160 849509c67b52fdf8742bcca94835b263687f662a SHA1 617dacb6f148aba6ccc7fb279db4cbda78f810dd SHA256 1b918068300cb2cefbecbe62f40965cccffdcfd9f8b48b1795a3f0ac9f758d04
+MD5 78f7135764044bc84102e5fcbe1fed18 ChangeLog 23626
+RMD160 849509c67b52fdf8742bcca94835b263687f662a ChangeLog 23626
+SHA256 1b918068300cb2cefbecbe62f40965cccffdcfd9f8b48b1795a3f0ac9f758d04 ChangeLog 23626
 MISC metadata.xml 449 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a SHA1 23042103b1ded51439d907767fe19fbde8834cf6 SHA256 5ba3a4038eb9f870f3fcc1d67c223efda046210a313bd4c0ffff7fb382e7e2d0
 MD5 8ca405b8c53bdbeb5e1c6e981420b315 metadata.xml 449
 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a metadata.xml 449
@@ -41,3 +46,6 @@ SHA256 e07b95e4a178f769cc73c0828d51e07421adafaadb8db53d979d05e038f6dbd0 files/di
 MD5 df09f347348d586bde5dec22db3d3120 files/digest-git-sources-2.6.24_rc2-r3 747
 RMD160 d09441ffa28e3b34f935dba9ca803c77476c5235 files/digest-git-sources-2.6.24_rc2-r3 747
 SHA256 17ba67062ba12dc608b98c24edea31601c40169f80aea65afeb11802e79794be files/digest-git-sources-2.6.24_rc2-r3 747
+MD5 67b007707be0e074b8fe35a5fe4bf1d0 files/digest-git-sources-2.6.24_rc2-r6 747
+RMD160 c0cb3ba50200f1eca3c88c4237aed0171d87db0e files/digest-git-sources-2.6.24_rc2-r6 747
+SHA256 37873c759b5b5c76a9ecba47528cfadb6a04d445c9ec01c596f41ec1ed8518dc files/digest-git-sources-2.6.24_rc2-r6 747
