@@ -1,0 +1,9 @@
+MD5 2cc2fd4d521dc5d7cfce0d8a9d1b3472 linux-2.6.23.tar.bz2 45488158
+RMD160 755690e80751d5de86d260fe05c6eeadde116c4e linux-2.6.23.tar.bz2 45488158
+SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb linux-2.6.23.tar.bz2 45488158
+MD5 c9a944690c4b22b05a6ac9c7dd3db9c5 patch-2.6.24-rc2-git6.bz2 326109
+RMD160 1255cde55b4de8fe1759c7cb9392dd19400a2091 patch-2.6.24-rc2-git6.bz2 326109
+SHA256 3fa81f90f374f9f664988b3591751b7888eff692da0b28aa75e3dd54692496fe patch-2.6.24-rc2-git6.bz2 326109
+MD5 384ce926e73bf27107b84cdce08c79f8 patch-2.6.24-rc2.bz2 9161681
+RMD160 738119066eb1b91ac6e4db299dd81e469412f019 patch-2.6.24-rc2.bz2 9161681
+SHA256 c316760b5489af874cfc0fdba4b0d9aacf597abeb94a871a6fbaf9876b7e4fd6 patch-2.6.24-rc2.bz2 9161681
